<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/bg_blue"
        android:contentDescription="@null"
        android:src="@drawable/kamus" />

    <Button
        android:id="@+id/btnLihatKata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCariKata"
        android:layout_below="@+id/btnCariKata"
        android:layout_marginTop="21dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/home"
        android:text="@string/lihat_kata" />

    <Button
        android:id="@+id/btnCariKata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTambahKata"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="34dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/search"
        android:text="@string/cari_kata" />

    <Button
        android:id="@+id/btnTambahKata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLihatKata"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/save"
        android:text="@string/tambah_kata" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTambahKata"
        android:layout_below="@+id/btnTambahKata"
        android:layout_marginTop="22dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/profil4"
        android:text="@string/about" />

</RelativeLayout>